fix tries counter alignment

--- a/styles/board.css
+++ b/styles/board.css
@@ -24,6 +24,9 @@ label {
 }
 
 .board-header h3 {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
   width: 4.5rem;
   white-space: nowrap;
 }
